@@ -94,3 +94,4 @@
 13-Dec-2020  - V0.93 Add runShell() method to ExecUtils()
 14-Dec-2020  - V0.94 Add option to suppress stderr output in ExecUtils()
 28-Dec-2020  - V0.95 Catch empty directory in mkdirForFile()
+20-Jan-2021  - V0.96 Adding IndexUtils() as a potentially temporary placement for this module.
